trivia questions added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript/app.js"></script>
+    <script type="text/javascript" href="assets/javascript/app.js"></script>
     
     <h1>The Walking Dead Trivia Game</h1>
 <p>Test Your Knowledge! How much of a fan are you to the most popular man eating 
@@ -24,6 +24,7 @@
 
     <div id="buttons">
       <button id="Play"><h2>Play</h2></button>
+      <button id="Reset"><h2>Restart Game</h2></button>
     </div>
 </div>
     <div id="image-holder"></div>
