adding in reset.css file and rewritting javascript file

--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset = "utf-8">
-    <title>Trivia Game</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta charset = "utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Sigmar+One" rel="stylesheet">
+    <link href="assets/css/reset.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="assets/css/style.css" rel="stylesheet">
+
+    <title>MCU Trivia Game</title>
+
 </head>
 
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+<div class="container">
+    <!---Title----->
+    <div class="row justify-content-center">
+        <div class="col justify content-center">
+            <h1>Marvel Cinematic Universe</h1>
+        </div>
+    </div>
 
-    <h1>The Walking Dead Trivia Game</h1>
-<p>Test Your Knowledge! How much of a fan are you to the most popular man eating 
-    zombie television show? Can you get a perfect score to show how much of a fandom 
-    are you. 
-</p>
+    <!----Summary and Game Description----->
+    <div class="row jusitfy-content-center">
+        <div class="col">
+            <p>Test Your Knowledge! How much of a fan are you to the 
+                most popular man eating zombie television show, 
+                The Walking Dead? Can you get a perfect score to 
+                show how much of a fandom are you. 
+            </p>
+        </div>
+    </div>
 
-<div class = "container">
+    <div class = "container">
         <div id = "time"></div>
         <div id = "question"></div>
         <div id = "answer"></div>
-
-    <div id="buttons">
-      <button id="play"><h2>Play</h2></button>
-      <button id="reset"><h2>Restart Game</h2></button>
+        <div id="buttons">
+    <!--Buttons at End of Game-->
+            <button id="play"><h2>Play</h2></button>
+            <button id="reset"><h2>Restart Game</h2></button>
+        </div>
     </div>
+
 </div>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    
 </body>
 </html>
