removed images and added new html elements to display on page

--- a/index.html
+++ b/index.html
@@ -31,14 +31,27 @@
         </div>
     </div>
 
-    <div class = "container">
-        <div id = "time"></div>
-        <div id = "question"></div>
-        <div id = "answer"></div>
-        <div id="buttons">
-    <!--Buttons at End of Game-->
-            <button id="play"><h2>Play</h2></button>
+    <div class = "row justify-content-center">
+        <div class="col">
+            <div id= "start"></div>
+            <button id="start"><h2>Play</h2></button>
+        <!---Question & Answer Page-->
+            <div id="timeLeft"></div>
+            <div id="currentQuestion"></div>
+            <div id="question"></div>
+            <div id="choice"></div>
+
+        <!---Answer Page----->
+            <div id="message"></div>
+            <div id="correctAnswer"></div>
+
+        <!-----Score Stats----->
+            <div id="final"></div>
+            <div id = "allCorrect"></div>
+            <div id = "allIncorrect"></div>
+            <div id= "unanswered"></div>
             <button id="reset"><h2>Restart Game</h2></button>
+    <!--Buttons at End of Game-->
         </div>
     </div>
 
