fixed some div and syntax in js file. working timer and displaying messages after each questions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!---Title----->
     <div class="row justify-content-center">
         <div class="col justify content-center">
-            <h1>Marvel Cinematic Universe</h1>
+            <h1 class="title">Marvel Cinematic Universe</h1>
         </div>
     </div>
 
@@ -32,14 +32,12 @@
     </div>
 
     <div class = "row justify-content-center">
-        <div class="col">
-            <div id= "start"></div>
-            <button id="start"><h2>Play</h2></button>
+            <button id= "start">Start</button>
         <!---Question & Answer Page-->
             <div id="timeLeft"></div>
             <div id="currentQuestion"></div>
-            <div id="question"></div>
-            <div id="choice"></div>
+            <div class="question"></div>
+            <div class="choice"></div>
 
         <!---Answer Page----->
             <div id="message"></div>
@@ -50,9 +48,7 @@
             <div id = "allCorrect"></div>
             <div id = "allIncorrect"></div>
             <div id= "unanswered"></div>
-            <button id="reset"><h2>Restart Game</h2></button>
-    <!--Buttons at End of Game-->
-        </div>
+            <div id="reset"></div>
     </div>
 
 </div>
