new title and added boostrap cdn

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset = "utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Sigmar+One" rel="stylesheet">
     <link href="assets/css/reset.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sketchy/bootstrap.min.css" rel="stylesheet" integrity="sha384-N8DsABZCqc1XWbg/bAlIDk7AS/yNzT5fcKzg/TwfmTuUqZhGquVmpb5VvfmLcMzp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
 
@@ -16,23 +16,21 @@
     <!---Title----->
     <div class="row justify-content-center">
         <div class="col justify content-center">
-            <h1 class="title">Marvel Cinematic Universe</h1>
+            <img src="assets/images/title.png" class=title alt="Title">
         </div>
     </div>
 
     <!----Summary and Game Description----->
     <div class="row jusitfy-content-center">
         <div class="col">
-            <p>Test Your Knowledge! How much of a fan are you to the 
-                most popular man eating zombie television show, 
-                The Walking Dead? Can you get a perfect score to 
-                show how much of a fandom are you. 
+            <p>Test your knowledge on this Marvel Cinematic Universe Trivia Quiz. 
+                Find out how big of a fan you are by taking this quiz. 
             </p>
         </div>
     </div>
 
     <div class = "row justify-content-center">
-            <button id= "start">Start</button>
+            <button type="button" class="btn btn-dark" id= "start">Start</button>
         <!---Question & Answer Page-->
             <div id="timeLeft"></div>
             <div id="currentQuestion"></div>
