--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <!----Summary and Game Description----->
     <div class="row jusitfy-content-center">
         <div class="col">
-            <p>Test your knowledge on this Marvel Cinematic Universe Trivia Quiz. 
+            <h4>Test your knowledge on this Marvel Cinematic Universe Trivia Quiz. 
                 Find out how big of a fan you are by taking this quiz. 
-            </p>
+            </h4>
         </div>
     </div>
 
